2008-03-13  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/thinice/src/thinice_rc_style.h:
	mark_type2 and paned_dots used the same bit (also fixes compiling
	with --enable-paranoia)

2008-03-13  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/support.c: (clearlooks_get_parent_bg):
	Only use the notebooks background if it draws a border.

2008-03-10  Benjamin Berg  <benjamin@sipsolutions.net>

	* NEWS:
	* README:
	* configure.ac:
	Update for the 2.14.0 stable release.

2008-03-10  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/crux/src/crux-draw.c: (draw_box):
	Fix a memory leak in the new spinbutton handling code.

2008-03-10  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/crux/src/crux-draw.c: (draw_box):
	Fix a regression:
	crux would access widget to check the focused state even if widget
	is NULL. This could potentially crash applications.

2008-03-03  Thomas Wood  <thos@gnome.org>

	* engines/crux/src/crux-draw.c: (draw_box_gap), (draw_extension): Add
	bevel to notebooks

2008-03-03  Thomas Wood  <thos@gnome.org>

	* engines/crux/src/crux-draw.c: (draw_shadow_gap), (draw_box_gap):
	Replace use of deprecated function

2008-03-03  Thomas Wood  <thos@gnome.org>

	* engines/crux/src/crux-draw.c: (draw_hline), (draw_vline): Convert
	hline and vline functions to cairo

2008-03-03  Thomas Wood  <thos@gnome.org>

	* engines/crux/src/crux-draw.c: (draw_box),
	(draw_handle): Make handlboxes appear "attached" to their child

2008-03-03  Benjamin Berg  <benjamin@sipsolutions.net>

	* themes/Crux/gtk-2.0/gtkrc:
	Use the right text color for text in progress bars.

2008-03-03  Thomas Wood  <thos@gnome.org>

	* engines/crux/src/crux-draw.c: (draw_box), (draw_arrow): Fix spin
	buttons for RTL locales

2008-03-03  Thomas Wood  <thos@gnome.org>

	* engines/crux/src/crux-draw.c:
	(paint_button): Reduce radius on buttons without an extra shadow and
	reduce opacity of extra shadow on insensitive buttons